# SpeedyNote

./: CMakeLists.txt  resources.qrc
docs/: OPTIMIZATION_PLAN.md  TECH_STACK.md
resources/styles/: buttons.qss  buttons_dark.qss  controls.qss  controls_dark.qss  dialogs.qss  dialogs_dark.qss  tabs.qss  tabs_dark.qss  toolbar.qss  toolbar_dark.qss
source/: ControlPanelDialog.cpp  ControlPanelDialog.h  DocumentConverter.cpp  Main.cpp  MainWindow.cpp  MainWindow.h  SDLControllerManager.cpp
source/core/: Document.cpp  Document.h  DocumentViewport.cpp  DocumentViewport.h  NotebookLibrary.cpp  NotebookLibrary.h
source/layers/: VectorLayer.h
source/ui/: Toolbar.cpp
source/ui/actionbars/: ActionBar.cpp
source/ui/launcher/: FloatingActionButton.cpp  FloatingActionButton.h  FolderHeaderDelegate.cpp  FolderHeaderDelegate.h  Launcher.cpp  Launcher.h  NotebookCardDelegate.cpp  NotebookCardDelegate.h  SearchModel.cpp  SearchModel.h  StarredListView.cpp  StarredListView.h  StarredModel.cpp  StarredModel.h  TagManagerDialog.cpp  TagManagerDialog.h  TimelineListView.cpp  TimelineListView.h  TimelineModel.cpp  TimelineModel.h
source/ui/sidebars/: PagePanel.cpp
